Added includes folder and updated web index and test-web app

--- a/web/index.pug
+++ b/web/index.pug
@@ -1,6 +1,12 @@
 doctype html
 html
     head
-        title = "Potato"
+        style
+            include includes/style.css
+        title Potato
     body
-        h1 Hi there
+        include ./includes/header.pug
+
+
+
+        include ./includes/footer.pug
