Completely redid authentication system to use express-session

--- a/web/includes/header.pug
+++ b/web/includes/header.pug
@@ -1,5 +1,7 @@
 - if (user != null)
     h1='Welcome back, ' + user + '!'
 - else
-    a(href="/", name="Login") Login
+    a(href="/login", name="Login") Login
+
+a(href="/", name="Home") Home
 br
