--- a/web/login.pug
+++ b/web/login.pug
@@ -8,9 +8,9 @@ html
 
         script(type='text/javascript').
             function login() {
-                var user = document.getElementById('userInput').value;
+                var name = document.getElementById('nameInput').value;
                 var pass = document.getElementById('passInput').value;
-                document.location = "login/" + user + "/" + pass;
+                document.location = "login/" + name + "/" + pass;
             }
 
     body
@@ -18,22 +18,17 @@ html
 
         h1 Login
 
-        p Username:
-
-        input(
-            type='text'
-            id='userInput'
-            name='user'
-        )
-
-        p Password:
-
-        input(
-            type='text'
-            id='passInput'
-            name='pass'
-        )
-
-        div(class="submit", href="login()")
+        div
+          form(action='/login',method='post')
+            div(data-role='fieldcontain')
+              fieldset(data-role='controlgroup')
+                label(for='name') Username
+                   input(id='name',type='text',value='',placeholder='',name='name')
+            div(id='hiddendiv',data-role='fieldcontain')
+              fieldset(data-role='controlgroup')
+                label(for='password') Password
+                   input(id='password',type='text',value='',placeholder='',name='pass')
+            div(data-role='fieldcontain')
+              input(type='submit',value='Login',data-transition='fade', data-theme='c')
 
         include ./includes/footer.pug
