--- a/web/includes/style.css
+++ b/web/includes/style.css
@@ -1,8 +1,17 @@
 body {
-    background-color: lightblue;
+    text-align: center;
+    background-color: lightgreen;
 }
 
 p {
+    margin-left: auto;
+    margin-right: auto;
     font-family: verdana;
     font-size: 20px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
