Added cloud service!

--- a/web/index.pug
+++ b/web/index.pug
@@ -8,5 +8,8 @@ html
     body
         include ./includes/header.pug
 
+        br
+        a(href="/cloud?path=",name="Cloud") Cloud
+        br
 
         include ./includes/footer.pug
