--- a/web/login.pug
+++ b/web/login.pug
@@ -27,7 +27,7 @@ html
             div(id='hiddendiv',data-role='fieldcontain')
               fieldset(data-role='controlgroup')
                 label(for='password') Password
-                   input(id='password',type='text',value='',placeholder='',name='pass')
+                   input(id='password',type='password',value='',placeholder='',name='pass')
             div(data-role='fieldcontain')
               input(type='submit',value='Login',data-transition='fade', data-theme='c')
 
