--- a/web/includes/style.css
+++ b/web/includes/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color: lightgreen;
+    background-color: white;
 }
 
 p {
@@ -14,4 +14,40 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: grey;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 320px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
 }
