--- a/web/index.pug
+++ b/web/index.pug
@@ -6,10 +6,12 @@ html
         title Potato
 
     body
-        include ./includes/header.pug
+        header
+            include ./includes/header.pug
 
         br
         a(href="/cloud?path=",name="Cloud") Cloud
         br
 
-        include ./includes/footer.pug
+        footer
+            include ./includes/footer.pug
